feat: Added enemy info

--- a/ZZZDmgCalculator/Components/Setup/SetupCard.razor
+++ b/ZZZDmgCalculator/Components/Setup/SetupCard.razor
@@ -8,5 +8,8 @@
 		<RadzenTabsItem Text=@Lang["Buffs"] class="adaptive-tab-item">
 			<BuffSetup Team="TeamState" Agent="TeamState.Agents[State.CurrentAgentIndex]"/>
 		</RadzenTabsItem>
+		<RadzenTabsItem Text=@Lang["Team"] class="adaptive-tab-item">
+			<TeamSetup Team="TeamState"/>
+		</RadzenTabsItem>
 	</Tabs>
 </RadzenTabs>	
