--- a/ZZZDmgCalculator/_Imports.razor
+++ b/ZZZDmgCalculator/_Imports.razor
@@ -16,5 +16,6 @@
 @using ZZZDmgCalculator.Dialogs.Shared
 @using ZZZDmgCalculator.Components.Main
 @using ZZZDmgCalculator.Components.Setup
+@using ZZZDmgCalculator.Components.Skills
 @using ZZZDmgCalculator.Models.Enum
 @using ZZZDmgCalculator.Models.Info
