--- a/ZZZDmgCalculator/Components/Skills/SkillCard.razor
+++ b/ZZZDmgCalculator/Components/Skills/SkillCard.razor
@@ -4,7 +4,7 @@
 
 	@foreach (var group in _groups)
 	{
-		<AbilityList Category="group.Key" Abilities="group" Stats="Agent.Stats"/>
+		<AbilityList Category="group.Key" Abilities="group" Agent="Agent"/>
 	}
 	
 </RadzenPanelMenu>
