--- a/ZZZDmgCalculator/wwwroot/css/app.css
+++ b/ZZZDmgCalculator/wwwroot/css/app.css
@@ -243,6 +243,18 @@ body {
 	height: 24px;
 }
 
+tbody tr:hover td {
+	background-color: var(--rz-panel-menu-item-2nd-level-hover-background-color) !important;
+}
+
+.rz-group-row td {
+	background-color: var(--rz-grid-stripe-background-color) !important;
+}
+
+.rz-data-row td {
+	background-color: var(--rz-grid-stripe-odd-background-color) !important;
+}
+
 #blazor-error-ui {
 	background: lightyellow;
 	bottom: 0;
