feat(Skills): Added conditional buffs to skills

--- a/ZZZDmgCalculator/Components/Skills/AbilityList.razor
+++ b/ZZZDmgCalculator/Components/Skills/AbilityList.razor
@@ -46,7 +46,7 @@
 				</thead>
 				@foreach (var ability in Abilities)
 				{
-					<AbilityView Ability="ability" Scale="_skillLevel"/>
+					<AbilityView Ability="ability"/>
 				}
 			</table>
 		</div>
