--- a/ZZZDmgCalculator/Components/Skills/AbilityView.razor
+++ b/ZZZDmgCalculator/Components/Skills/AbilityView.razor
@@ -3,11 +3,12 @@
 <tbody>
 <tr class="rz-group-row rz-unselectable-text">
 	<td colspan="4">
-		<span class="rz-cell-data">@Ability.DisplayName</span>
+		<span class="rz-cell-data">@Ability.Info.DisplayName</span>
 	</td>
 </tr>
 @foreach (var skill in Ability.Skills)
 {
-	<SkillView Skill="skill" Scale="Scale"/>
+	<SkillView Skill="skill"/>
 }
+
 </tbody>
