--- a/ZZZDmgCalculator/_Imports.razor
+++ b/ZZZDmgCalculator/_Imports.razor
@@ -5,17 +5,17 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.JSInterop
 @using Radzen
 @using Radzen.Blazor
-@using Microsoft.JSInterop
 @using ZZZDmgCalculator
-@using ZZZDmgCalculator.Layout
-@using ZZZDmgCalculator.Services
 @using ZZZDmgCalculator.Components
-@using ZZZDmgCalculator.Dialogs;
-@using ZZZDmgCalculator.Dialogs.Shared
 @using ZZZDmgCalculator.Components.Main
 @using ZZZDmgCalculator.Components.Setup
-@using ZZZDmgCalculator.Components.Skills
+@using ZZZDmgCalculator.Components.Skills;
+@using ZZZDmgCalculator.Dialogs
+@using ZZZDmgCalculator.Dialogs.Shared
+@using ZZZDmgCalculator.Layout
 @using ZZZDmgCalculator.Models.Enum
 @using ZZZDmgCalculator.Models.Info
+@using ZZZDmgCalculator.Services
